Fix assignment alignment

--- a/frontend/src/styles/UserList.css
+++ b/frontend/src/styles/UserList.css
@@ -87,7 +87,7 @@ tbody tr {
 }
 
 .people_table_data_start {
-  width: 209px;
+  width: auto;
   height: 62px;
 
   text-align: left;
